alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ a:visited { color: #000; }
 }
 
 .post-content {
-    text-align: center;
+    
 }
 .post-content img {
     display: block;
